add NetStandard project for compability with net core projects by nuget

--- a/GenerationGost2012/GenerationGost2012.csproj
+++ b/GenerationGost2012/GenerationGost2012.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\crypto\crypto.dotnet.csproj" />
+    <ProjectReference Include="..\crypto\crypto.netstandart.csproj" />
   </ItemGroup>
 
 </Project>
